[package]
name = "finance_enums_py"
version = "0.3.0"
edition = "2021"

[lib]
name = "finance_enums"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
finance_enums = { path = "./rust", version = "*" }
pyo3 = { version = "0.20.2", features = ["abi3-py37", "extension-module"] }
strum = "0.25.0"

[build-dependencies]
cbindgen = "0.26.0"
