[package]
name = "finance_enums_py"
version = "0.2.3"
edition = "2021"
publish = false

[lib]
name = "finance_enums"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
finance_enums = { path = "./rust", version = "*" }
pyo3 = { version = "0.16", features = ["abi3-py37", "extension-module", "multiple-pymethods"] }
strum = "0.24.1"

[profile.release]
panic = 'abort'
lto = true

