[package]
name = "finance_enums_py"
version = "0.3.0"
edition = "2021"
publish = false

[lib]
name = "finance_enums"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
finance_enums = { path = "./rust", version = "*" }
pyo3 = { version = "0.28.2", features = ["abi3", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true
