[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "finance-enums"
authors = [{name = "PrettyGoodCapital", email = "prettygoodcapital@gmail.com"}]
description="Standard Financial Enumerations"
version = "0.3.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = []
dependencies = [
    "cffi",
]

[project.optional-dependencies]
develop = [
    "bump2version",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "ruff",
    "twine",
    "wheel",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
]

[project.urls]
Repository = "https://github.com/prettygoodcapital/finance-enums"
Homepage = "https://github.com/prettygoodcapital/finance-enums"
Issues = "https://github.com/prettygoodcapital/finance-enums/issues"

[tool.maturin]
bindings = "cffi"

[tool.ruff]
line-length = 150

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "finance_enums/tests"

[tool.setuptools]
py-modules = ["finance_enums"]
