[build-system]
requires = [
    "cmake",
    "ninja",
    "numpy",
    "pybind11[global]",
    "scikit-build",
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "finance-enums"
authors = [{name = "Tim Paine", email = "t.paine154@gmail.com"}]
description="Standard Financial Enumerations"
version = "0.3.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = []
dependencies = []

[project.optional-dependencies]
develop = [
    "black>=23",
    "bump2version",
    "check-manifest",
    "cibuildwheel",
    "numpy",
    "pybind11[global]",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "ruff",
    "scikit-build",
    "twine",
    "wheel",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
]

[project.urls]
Repository = "https://github.com/timkpaine/finance-enums"
Homepage = "https://github.com/timkpaine/finance-enums"
Issues = "https://github.com/timkpaine/finance-enums/issues"

[tool.black]
color = true
line-length = 150
target-version = ["py310"]
skip-string-normalization = true

[tool.check-manifest]
ignore = []

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-*"
before-all = "make develop"

build-verbosity = "2"
environment = {STATIC_PYTHON="On"}

test-command = "pytest -vvv {project}/finance_enums/tests"
test-requires = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
]

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64"
skip = "*musllinux* *i686"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"
environment = {CFLAGS="-I/usr/local/include -L/usr/local/lib", CXXFLAGS="-I/usr/local/include -L/usr/local/lib", LDFLAGS="-L/usr/local/lib"}

[tool.cibuildwheel.windows]
archs = "AMD64"
skip = "*win32 *arm_64"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "finance_enums/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.setuptools]
py-modules = ["finance_enums"]
