[package]
name = "finance_enums"
version = "0.3.0"
authors = ["PrettyGoodCapital <prettygoodcapital@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/prettygoodcapital/finance-enums"
description = "Standard financial enumerations"

[lib]
name = "finance_enums"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[profile.test.junit]
path = "junit.xml"
